@@ -1,3 +1,8 @@
+2010-11-17  Tristan Gingold  <gingold@adacore.com>
+
+	* vms-lib.c (vms_write_index): Add comments.
+	Partially revert previous patch.  Free blocks later.
+
 2010-11-10  Richard Sandiford  <richard.sandiford@linaro.org>
 
 	* elf32-arm.c (elf32_arm_merge_eabi_attributes): Remove unused
